Simplifies wizard construction