@@ -37,6 +37,7 @@ if (project.hasProperty( 'targetOs' )) {
 }
 
 def moduleSecurity = [
+    '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
     '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
     '--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED',
     '--add-opens=javafx.graphics/javafx.scene.text=ALL-UNNAMED',
@@ -53,7 +54,7 @@ def moduleSecurity = [
 
 javafx {
   version = '19'
-  modules = ['javafx.controls', 'javafx.swing']
+  modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.swing']
   configuration = 'compileOnly'
 }
 
